[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "std"] }
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
